[tool.poetry]
name = "aio-nxapi"
packages = [
    { include = "aionxapi" },
    { include = "asyncnxapi" }
]
version = "0.5.0"
description = "Cisco NX-API asyncio client"
authors = ["Jeremy Schulman"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.*,<3.11"
httpx = "^0.23.0"
lxml = "^4.9.1"

[tool.poetry.group.dev.dependencies]
invoke = "^1.7.3"
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-breakpoint = "^1.1.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.1"
pre-commit = "^2.20.0"
interrogate = "^1.5.0"

[tool.black]
target-version = ['py38', 'py310']

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py"]
