[tool.poetry]
name = "aio-nxapi"
packages = [
    { include = "aionxapi" },
    { include = "asyncnxapi" }
]
version = "0.5.2"
description = "Cisco NX-API asyncio client"
authors = ["Jeremy Schulman"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
httpx = "^0.23.0"
lxml = "^4.9.1"


[tool.black]
target-version = ['py38', 'py310']

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py"]
